Marking lookup input field as required before search

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -34,7 +34,7 @@
       
     </ul>
     <form class="form-inline my-2 my-lg-0" action="/" method="POST">
-      <input name="stock_ticker" class="form-control mr-sm-2" type="search" placeholder="Exchange Symbol " aria-label="Search">
+      <input name="stock_ticker" class="form-control mr-sm-2" type="search" placeholder="Exchange Symbol " aria-label="Search" required>
       <button class="btn btn-outline-info my-2 my-sm-0" type="submit">Lookup Stocks</button>
     </form>
   </div>
