Refactoring Not found page of API response

--- a/views/notfound.handlebars
+++ b/views/notfound.handlebars
@@ -1,5 +1,7 @@
 </br>
 <center>
+    <br>
+    <br>
    <div class="row">
       <!-- Modal -->
       <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
@@ -62,14 +64,22 @@
             </div>
          </div>
       </div>
-      <div class="col-md-12">
+
+      <div class="col-md-4">
+          <img src="Resources/robotNotFound.png"/>
+      </div>
+      <div class="col-md-8">
+          
          <div class="error-template">
+             
             <h1>
                Oops!
             </h1>
+            
             <h2>
                404 Not Found
             </h2>
+            <br>
             <div class="error-details">
                Sorry, the company stock exchange symbol you have entered is not correct. Please try again with a correct company exchange symbol.
             </div>
