--- a/views/notfound.handlebars
+++ b/views/notfound.handlebars
@@ -66,7 +66,7 @@
       </div>
 
       <div class="col-md-4">
-          <img src="Resources/robotNotFound.png"/>
+          <img src="Resources/images/robotNotFound.png"/>
       </div>
       <div class="col-md-8">
           
