--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -8,7 +8,8 @@
             <div class="card-header">{{stock.companyName}} ({{stock.symbol}})</div>
             <div class="card-body text-info">
                <h5 class="card-title">{{comapny.symbol}}</h5>
-               <p class="card-text">{{company.description}}</p>
+               <button type="button" class="btn btn-success" data-toggle="modal" data-target="#companyDescription">About {{stock.companyName}}</button>
+               <p class="card-text"></p>
             </div>
          </div>
       </div>
@@ -55,3 +56,23 @@
    </div>
    </br>
 </center>
+
+{{!-- company description modal --}}
+<div class="modal fade" id="companyDescription" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+  <div class="modal-dialog" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="exampleModalLabel">About {{stock.companyName}} ({{stock.symbol}})</h5>
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <div class="modal-body">
+        {{company.description}}
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-primary" data-dismiss="modal">Close</button>
+      </div>
+    </div>
+  </div>
+</div>{{!-- company description modal ends here --}}
