Adding disclaimer for the correctness of data

--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -36,16 +36,7 @@
             <div class="card-header"><strong>Stock Portfolio of {{stock.companyName}}</strong></div>
             <div class="card-body text-info">
                <table class="table table-hover">
-                  {{!-- 
-                  <thead>
-                     <tr>
-                        <th scope="col">#</th>
-                        <th scope="col">First</th>
-                        <th scope="col">Last</th>
-                        <th scope="col">Handle</th>
-                     </tr>
-                  </thead>
-                  --}}
+                  <caption>Disclaimer: The above data has been provided by a third party API. Hence, We do not guarantee the correcteness of these data.</caption>
                   <tbody>
                      <tr class="table-primary">
                         <td><strong>Primary Exchange</strong></td>
