--- a/views/welcome.handlebars
+++ b/views/welcome.handlebars
@@ -3,7 +3,7 @@
    </br>
    </br>
    <div class="row">
-      <!-- Modal -->
+      <!-- Modal to display Some Sample Company Exchange Symbols -->
       <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
          <div class="modal-dialog" role="document">
             <div class="modal-content">
