Adding images to resources folder

--- a/views/welcome.handlebars
+++ b/views/welcome.handlebars
@@ -88,10 +88,10 @@
          </div>
       </div>
       <div class="col-md-3">
-         <img src="https://images.vexels.com/media/users/3/151004/isolated/preview/8c9fcc41d2255904671c355fb02c3ed8-growth-graph-doodle-by-vexels.png" height="300px" width="300px">
+         <img src="Resources/images/welcome-graph.png" height="300px" width="300px">
       </div>
       <div class="col-md-3">
-         <img src="https://images.vexels.com/media/users/3/128423/isolated/preview/19d8eb1829e3b760374670b17146efb0-pie-chart-hand-drawn-doodle-by-vexels.png" height="300" width="300">
+         <img src="Resources/images/welcome-pie-chart.png" height="300" width="300">
       </div>
    </div>
    </div>
